added javafx to dockerfile