@@ -1,11 +1,15 @@
 FROM maven:latest
 
+# Install OpenJFX
+RUN apt-get update && \
+    apt-get install -y openjfx && \
+    apt-get clean;
+
 WORKDIR /app
 
 COPY pom.xml /app/
-
-COPY . /app/
+COPY src /app/src/
 
 RUN mvn package
 
-CMD ["java", "-jar", "target/cinemabuddy.jar"]
+CMD ["java", "--module-path", "/usr/share/openjfx/lib", "--add-modules", "javafx.controls,javafx.fxml", "-jar", "target/cinemabuddy.jar"]
